<resources>
    <string name="app_name">FamilyBudgetApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addIncomeBtnText">Добави приход</string>
    <string name="addExpenseBtnText">Добави разход</string>
    <string name="HomeBtnText">Начален Екран</string>
    <string name="ChangesBtnText">Направи промени</string>
    <string name="fragIncomeCheckBoxText">Повтарящ се приход</string>
    <string name="fragExpenseCheckBoxText">Повтарящ се разход</string>
    <string name="AddBtnText">Добави</string>
    <string name="fragIncomeShowIncomeBtnText">Покажи списък на приходите</string>
    <string name="DateBtnText">Избери дата</string>
    <string name="DayTextView">Ден</string>
    <string name="MonthTextView">Месец</string>
    <string name="AmountEditText">Сума</string>
    <string name="NameEditTextIncome">Име на приход</string>
    <string name="NameEditTextExpense">Име на разход</string>
    <string name="fragIncomeDeleteBtnTxt">Изтрий</string>
    <string name="Budget">Общ бюджет</string>
    <string name="contentDescription">Pig</string>
    <string name="UDNameEditText">Име</string>
    <string name="UDDateBtnText">Избери дата</string>
    <string name="UDHomeBtnText">Начален екран</string>
    <string name="UDDeleteButton">Изтрий</string>
    <string name="UDCheckBoxText">С повтаряне всеки месец</string>
    <string name="UDChangeBtnText">Промени</string>
    <string name="UDDayTextView">Ден</string>
    <string name="UDMonthTextView">Месец</string>
    <string name="UDAmountEditText">Сума</string>
</resources>